<resources>
    <string name="app_name">Dicoding Story App</string>
    <string name="email_hint">Email</string>
    <string name="email_invalid">Invalid email</string>
    <string name="login">Login</string>
    <string name="account_circle_icon">Account Circle Icon</string>
    <string name="password_hint">Password</string>
    <string name="password_invalid">Password less than 6 characters</string>
    <string name="don_t_have_any_account">Don\'t have any account?</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="already_have_account">Already have account?</string>
    <string name="settings">Settings</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="logout">Logout</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_new_story">Add new story</string>
    <string name="story_picture">Story picture</string>
    <string name="title">Title</string>
    <string name="story">Story</string>
    <string name="image_view_of_story">Image View of Story</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="description">Description</string>
    <string name="upload">Upload</string>
    <string name="shutter_button">Shutter button</string>
    <string name="switch_camera">Switch camera</string>
    <string name="title_activity_story_location">StoryLocationActivity</string>
    <string name="open_location_on_map">Open location on map</string>
    <string name="retry">Retry</string>
    <string name="stories_location">Stories Location</string>
</resources>